# Pulso-Back

./: .env.auth.example  .env.example  .env.production.example  .gitignore  README.md  STEP1_TRANSFORMER_CLEANUP.md  TEMP_DELETE_unified_transformer.txt  alembic.ini  migraciones_completas.txt  pyproject.toml  requirements.txt  scripts_etl.txt  yoyo.ini  yoyo.ini.backup.20250628_172622
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: assignment.py  dashboard.py  etl.py  evolution.py  operation.py  productivity.py  users.py
app/auth/: __init__.py  config.py  dependencies.py  models.py  role_routes.py  routes.py  security.py
app/core/: cache.py  config.py  database.py  dependencies.py  logging.py  middleware.py
app/database/: README.md  __init__.py  migration_manager.py  schemas.py  setup_timescaledb.py
app/database/migrations/: env.py  script.py.mako
app/database/migrations/versions/: 001_initial_etl_tables.py
app/etl/: README.md  config.py  utils.py  watermarks.py
app/etl/builders/: mart_builder.py
app/etl/coordinators/: calendar_driven_coordinator.py
app/etl/extractors/: bigquery_extractor.py
app/etl/loaders/: postgres_loader.py
app/etl/pipelines/: campaign_catchup_pipeline.py  extraction_pipeline.py
app/etl/transformers/: __init__.py  business_logic_transformer.py  data_transformer.py  raw_data_transformer.py  unified_transformer.py
app/models/: __init__.py  assignment.py  base.py  common.py  dashboard.py  database.py  evolution.py  operation.py  productivity.py
app/repositories/: base.py  bigquery_repo.py  cache_repo.py  data_adapters.py  postgres_repo.py  repository_factory.py  source_tables_repo.py  user_repo.py
app/services/: __init__.py  cache_service.py  dashboard_service_v2.py  data_processor.py  postgres_service.py  productivity_service.py  user_service.py
app/tests/: test_postgres_loader.py  test_postgres_service.py
docker/: api.Dockerfile  docker-compose.dev.yml  docker-compose.yml  etl-crontab  etl.Dockerfile
docs/: ETL_INSERT_ERRORS_FIX.md  TIMESCALEDB_FIX_INSTRUCTIONS.md  TIMESCALEDB_MIGRATION.md
etl/: README.md  __init__.py  config.py  debug_campaigns.py  dependencies.py  dependencies_aux_mart_extension.py  main.py  models.py  run_aux_mart_cli.py  run_pipeline.py  simple_incremental_etl.py  watermarks.py
etl/extractors/: __init__.py  bigquery_extractor.py
etl/loaders/: __init__.py  postgres_loader.py
etl/pipelines/: __init__.py  aux_build_pipeline.py  campaign_catchup_pipeline.py  full_etl_orchestrator.py  mart_build_pipeline.py  raw_data_pipeline.py  raw_data_pipeline_creado_el_enum.py  raw_data_pipeline_creado_el_integration.md  raw_data_pipeline_creado_el_multiple.py  raw_data_pipeline_creado_el_query.py  raw_data_pipeline_creado_el_single.py  simple_incremental_pipeline.py  test_creado_el_functionality.py
etl/sql/aux/: build_cuenta_estado_diario.sql  build_gestiones_diarias.sql  build_gestiones_unificadas.sql  build_pagos_dedup.sql  build_pagos_diarios.sql
etl/sql/mart/: build_assignment_data_source.sql  build_dashboard_base_metrics_bq_poc.sql  build_dashboard_data.sql  build_dashboard_data_source.sql  build_evolution_data_source.sql  build_operation_data_source.sql  build_productivity_data_source.sql
etl/sql/poc/: dashboard_base_metrics_bq.sql  evolution_base_metrics_bq.sql
etl/sql/raw/: asignaciones.sql  calendario.sql  ejecutivos.sql  homologacion_mibotair.sql  homologacion_voicebot.sql  mibotair_gestiones.sql  pagos.sql  trandeuda.sql  voicebot_gestiones.sql
etl/transformers/: __init__.py  dashboard_base_metrics_transformer.py  dashboard_data_transformer.py  evolution_data_transformer.py  mart_transformer_base.py  mart_transformer_factory.py  raw_data_transformer.py
migrations/: 000-enable-timescaledb.sql  001-create-etl-metadata-tables.sql  001-create-watermarks-table.sql  002-create-etl-execution-log-table.sql  002-create-project-schemas.sql  002-enable-timescaledb.sql  003-create-dashboard-data-table.sql  003-create-raw-tables.sql  003-create-timescaledb-hypertables.sql  004-create-evolution-data-table.sql  004-create-raw-voicebot-gestiones-table.sql  005-create-assignment-data-table.sql  005-create-raw-mibotair-gestiones-table.sql  006-create-aux-tables.sql  006-create-operation-data-table.sql  007-create-aux-gestiones-unificadas-table.sql  007-create-productivity-data-table.sql  008-create-cuenta-campana-state-table.sql  008-create-mart-tables.sql  009-create-gestion-cuenta-impact-table.sql  009-create_aux_cuenta_estado_diario.sql  010-create-aux-calendario.sql  010-create-pago-deduplication-table.sql  010-create-raw-calendario-table.py  011-create-raw-asignaciones-table.py  011-create-raw-calendario-table.sql  011-create-users-tables.sql  012-create-raw-asignaciones-table.sql  012-create-raw-trandeuda-table.py  013-create-raw-pagos-table.py  013-create-raw-trandeuda-table.sql  014-create-gestiones-unificadas-table.py  014-create-raw-pagos-table.sql  015-create-gestiones-unificadas-table.sql  016-create-raw-homologacion-mibotair-table.sql  016-create-simple-watermarks-table.sql  017-create-raw-homologacion-voicebot-table.sql  018-create-raw-ejecutivos-table.sql  019-create-roles-table.sql  020-create-users-table.sql  (+8 more)
migrations_backup_20250628_171847/: 001-create-watermarks-table.sql  003-create-dashboard-data-table.sql  007-create-productivity-data-table.sql
scripts/: cleanup_etl.py  diagnose_etl.py  setup.sh  setup_database.ps1  setup_database.sh  verify_bigquery_schema.py
shared/core/: config.py  logging.py
shared/database/: connection.py
tests/etl/: __init__.py
tests/etl/config/: test_config.py
tests/etl/fixtures/: __init__.py  sample_data.py
