# ==========================================================
#                  ASYNCPG PURE - pyproject.toml
# ==========================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulso-back"
version = "1.0.0"
description = "API + ETL Backend para Dashboard Cobranzas Telefónica - asyncpg Pure"
authors = [{name = "Ricky", email = "ricky@telefonica.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

# --- DEPENDENCIAS PRINCIPALES (ASYNCPG PURE) ---
dependencies = [
    # FastAPI & Web Framework
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.19",
    
    # Database & Cache (ASYNCPG PURE + psycopg2 for migrations only)
    "asyncpg>=0.30.0",              # PostgreSQL async driver (runtime)
    "psycopg2-binary>=2.9.9",       # Required by yoyo-migrations only
    "yoyo-migrations>=8.2.0",       # Pure SQL migrations
    "redis>=5.0.1",                 # Cache
    
    # Google Cloud
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-storage>=2.10.0",
    "google-auth>=2.23.4",
    
    # Data Processing & Config
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # ETL & Scheduling
    "celery[redis]>=5.3.4",
    "apscheduler>=3.10.4",
    "tenacity>=8.2.3",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # HTTP & Utilities
    "httpx>=0.25.2",
    "starlette>=0.40.0",
    
    # Development tools (included in main for convenience)
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=24.3.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

# --- DEPENDENCIAS OPCIONALES (PARA DESARROLLO EXTENDIDO) ---
[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0", 
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

# --- SCRIPT DE EJECUCIÓN ---
[project.scripts]
dev = "app.main:main"

# --- SETUPTOOLS CONFIGURATION ---
[tool.setuptools]
packages = ["app"]

# --- DEVELOPMENT TOOLS ---
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# --- YOYO MIGRATIONS CONFIGURATION ---
[tool.yoyo]
sources = ["migrations"]
database = "postgresql://postgres:password@localhost:5432/pulso_db"
batch_mode = false
verbosity = 1
